# comptabilite

./: .gitignore  README.md  claude.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: jinja2-import-echeances.md  url-for-endpoint-conflict.md
.planning/phases/01-ledger-foundation-and-import-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-quebec-domain-logic/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  (+5 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/: actifs.yaml
ledger/: comptes.beancount  main.beancount  pending.beancount
ledger/2025/: 11.beancount
ledger/2026/: 01.beancount  02.beancount
rules/: categorisation.yaml  taxes.yaml
src/compteqc/: __init__.py
tests/: test_capex.py  test_categorisation.py  test_cli.py  test_cotisations.py  test_cpa_package.py  test_documents.py  test_dpa.py  test_echeances.py  test_factures.py  test_fava_ext.py  test_fava_gap_closure.py  test_fava_quebec.py  test_feedback.py  test_importers.py  test_impot.py  test_ledger.py  test_llm.py  test_mcp_mutations.py  test_mcp_server.py  test_paie_integration.py  test_pending.py  test_pipeline.py  test_pret_actionnaire.py  test_rapports.py  test_rates.py  test_reviser.py  test_taxes.py
tests/fixtures/: rbc_carte_sample.csv  rbc_cheques_sample.csv  rbc_sample.ofx
(+163 files in other folders)
